@@ -332,7 +332,7 @@ use Pugs::Runtime::Match; # overload doesn't work without this ???
 {
     # not-alpha
     my $rule = Pugs::Compiler::Token->compile('a<!alpha>.', { ratchet => 1 } );
-    print "Source: ", do{use Data::Dumper; Dumper($rule->{perl5})};
+    #print "Source: ", do{use Data::Dumper; Dumper($rule->{perl5})};
     my $match = $rule->match( "ac" );
     #print "Match: ", do{use Data::Dumper; Dumper($match)};
     is( "$match", "", 'negated alpha' );
@@ -632,7 +632,7 @@ use Pugs::Runtime::Match; # overload doesn't work without this ???
 =cut
     my $match;
     my $v = 0;
-    my %test = (
+    %Test123::test = (
         if =>    2,        # fail (number, not '1')
         iff =>   1,        # match (longer than 'if')
         until => Pugs::Compiler::Token->compile('(a.a)'),  
@@ -640,7 +640,7 @@ use Pugs::Runtime::Match; # overload doesn't work without this ???
         use =>   sub { $v = 1 },   
                            # closure - print "use()"
     );   
-    $rule1 = Pugs::Compiler::Token->compile('%test 123');
+    $rule1 = Pugs::Compiler::Token->compile('%Test123::test 123');
     
     $match = $rule1->match("iff123");
     is($match,'iff123',"Matched hash{iff}");
@@ -662,7 +662,7 @@ use Pugs::Runtime::Match; # overload doesn't work without this ???
 {
     my $match;
     my $v = 0;
-    my %test = (
+    %Test123::test = (
         if =>    2,        # fail (number, not '1')
         iff =>   1,        # match (longer than 'if')
         until => Pugs::Compiler::Token->compile('
@@ -679,8 +679,8 @@ use Pugs::Runtime::Match; # overload doesn't work without this ???
         '' =>    Pugs::Compiler::Token->compile('other'),  
                            # default subrule - match "other"
     );   
-    $rule1 = Pugs::Compiler::Token->compile('<%test> 123');
-    #print "<<< ", Pugs::Compiler::Token->compile('<%test> 123')->{perl5}, ">>>";
+    $rule1 = Pugs::Compiler::Token->compile('<%Test123::test> 123');
+    #print "<<< ", Pugs::Compiler::Token->compile('<%Test123::test> 123')->{perl5}, ">>>";
     
     $match = $rule1->match("iff123");
     is($match,'iff123',"Matched hash{iff}");
@@ -703,7 +703,7 @@ use Pugs::Runtime::Match; # overload doesn't work without this ???
 
     #print "\$/ ",Dumper($match->data);
     #print "\$/{test} ",Dumper($match->{test}->data);
-    is($match->{test}(), 42, "Matched hash{until} return object");
+    is( ${ $match->{test} }, 42, "Matched hash{until} return object");
 
     $match = $rule1->match("other123");
     is($match,'other123',"default subrule");
@@ -714,11 +714,11 @@ TODO:
 {
     local $TODO = "failing hash rule interpolation inside itself";
     my $match;
-    my %test = (
-        rule1 => Pugs::Compiler::Token->compile('xx %test yy'),  
+    %Test123::test = (
+        rule1 => Pugs::Compiler::Token->compile('xx %Test123::test yy'),  
         rule2 => Pugs::Compiler::Token->compile('abc'),   
     );   
-    $rule1 = Pugs::Compiler::Token->compile('%test 123');
+    $rule1 = Pugs::Compiler::Token->compile('%Test123::test 123');
     #print $rule1->perl5;
     $match = $rule1->match("rule1xxrule2abcyy123");
     is($match,'rule1xxrule2abcyy123',"Matched hash inside hash");
